--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
 </div>
 <div class="sec hotspots" id="hotspots">
   <p>ABOUT US</p>
+  <div>
+    <span>IQuartz</span> a make in India Initiative, started by well established team to cater International and Domestic market to give high quality products and designs. Our product ranges are of world class quality at an affordable price.
+    We are giving numerous for your different requirements.
+  </div>
 </div>
 <div class="sec" id="contact">
   <p>CONTACT US</p>
