--- a/index.html
+++ b/index.html
@@ -91,13 +91,37 @@
     <span>IQuartz</span> a make in India Initiative, started by well established team to cater International and Domestic market to give high quality products and designs. Our product ranges are of world class quality at an affordable price.
     We are giving numerous for your different requirements.
   </div>
+  <p>Inquiry Form</p>
+  <form action="">
+    <div class="form">
+        <div>
+            <div>
+                <label for="name">Your Name</label>
+                <input type="text" name="name" id="">
+            </div>
+            <div>
+                <label for="number">Mobile Number</label>
+                <input type="number" style="font-weight: 700;" name="number" id="">
+            </div>
+            <div>
+                <label for="email">Email Id</label>
+                <input type="email" name="email" id="">
+            </div>
+        </div>
+        <div class="big">
+            <label for="more">Tell Us More Here</label>
+            <textarea name="more" id="" cols="30" rows="10"></textarea>
+        </div>
+    </div>
+    <div class="button"><button>Submit</button></div>
+</form>
 </div>
 <div class="sec" id="contact">
   <p>CONTACT US</p>
   <div class="contact-2">
     <div class="location">
       <img src="./contact/1.JPG" alt="">
-      <span>127, Poonamalee High Road, Madhoravoyal, Chennai - 600 095</span>
+      <a style="color:white;text-decoration:none;font-family: 'Montserrat',sans-serif;" href="https://goo.gl/maps/UybwGZGyF8CVqx2m9"><span>127, Poonamalee High Road, Madhoravoyal, Chennai - 600 095</span></a>
     </div>
     <div class="other">
       <div>
@@ -110,6 +134,7 @@
       </div>
     </div>
   </div>
+  <a href="https://wa.me/919840839697" style="color:rgb(80 193 239);text-decoration:none;font-family: 'Montserrat',sans-serif;">Click Here For Whatsapp Chat Support</a>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="cctask1.js" type="text/javascript"></script>
