--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li ><a href="#topten" class="topten-mark scroll"> products</a></li>
       <li ><a href="#country" class="country-mark scroll">Advantages</a></li>
       <li ><a href="#hotspots" class="hotspots-mark scroll">About Us</a></li>
+      <li ><a href="#inquiry" class="inquiry-mark scroll">Inquiry</a></li>
       <li ><a href="#contact" class="contact-mark scroll">Contact Us</a></li>
 
     </ul>
@@ -91,6 +92,8 @@
     <span>IQuartz</span> a make in India Initiative, started by well established team to cater International and Domestic market to give high quality products and designs. Our product ranges are of world class quality at an affordable price.
     We are giving numerous for your different requirements.
   </div>
+</div>
+<div style="width: 100%;" class="sec hotspots inquiry" id="inquiry">
   <p>Inquiry Form</p>
   <form action="">
     <div class="form">
