--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>QUARTZ</title>
+  <title>IQUARTZ</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="cctask.css">
@@ -15,7 +15,7 @@
 <body>
 <nav>
       <span style="font-size:1em ;color:white; margin-left:10px;">
-        <a style="font-size: 23px;">QUARTZ</a>
+        <a style="font-size: 23px;  color:rgb(80 193 239);">IQUARTZ</a>
       </span>
       <ul>
       <li ><a href="#home" class="home-mark active scroll">Home</a></li>
@@ -58,33 +58,35 @@
       </div>
     </div> 
   </div> 
+  <div style="position: relative;">
+    <div id="country" style="    font-family:  'Montserrat', sans-serif;font-size: 1.3em;z-index:20;line-height:50px;height: 50px; width: 150px;text-align:center;position: absolute;left: 0;top: 0;background-color: black;color: white;">Advantages:</div>
+    <marquee style="height: 30px;color:white;margin-bottom: 100px;padding:10px 0px;line-height: 30px;vertical-align: top;">
+      <div></div>
+      <span>Made of quartz</span>
+      <div></div>
+      <span>No More Scratches</span>
+      <div></div>
+      <span>Heat Resistant</span>
+      <div></div>
+      <span>stain resistant</span>
+      <div></div>
+      <span>non-absorbent</span>
+      <div></div>
+      <span>hygenic</span>
+      <div></div>
+      <span>eco-friendly</span>
+      <div></div>
+      <span>easy to clean</span>
+      <div></div>
+    </marquee>
+  </div>
 
   </div>
+
 </div>
-<div class="sec country" id="country">
-  <p>ADVANTAGES</p>
-  <div class="flex">
-  <div class="left">
-    <div class="advantage">Made of quartz<span class="line"></span></div>
-    <div class="advantage">No more Scratches<span class="line"></span></div>
-    <div class="advantage">heat resistant<span class="line"></span></div>
-    <div class="advantage">stain resistant<span class="line"></span></div>
-    <div class="advantage">non-absorbent<span class="line"></span></div>
-    <div class="advantage">hygenic<span class="line"></span></div>
-    <div class="advantage">eco-friendly<span class="line"></span></div>
-    <div class="advantage">easy to clean<span class="line"></span></div>
-  </div>
-  <div class="right">
-    <div class="advantage"><span class="line"></span>mold & mildew resistant</div>
-    <div class="advantage"><span class="line"></span>immunity to freeze</div>
-    <div class="advantage"><span class="line"></span>flexural strength</div>
-    <div class="advantage"><span class="line"></span>resistant to alklis and acids</div>
-    <div class="advantage"><span class="line"></span>uniform pattern</div>
-    <div class="advantage"><span class="line"></span>color resistant</div>
-    <div class="advantage"><span class="line"></span>low maintenance</div>
-    <div class="advantage"><span class="line"></span>versatile</div>
-  </div>
-  </div>
+<div class="sec country">
+  <img src="./spec.png" width="80%" style="margin:10%;" height="600px" alt="">
+
 </div>
 <div class="sec hotspots" id="hotspots">
   <p>ABOUT US</p>
@@ -137,8 +139,11 @@
       </div>
     </div>
   </div>
-  <a href="https://wa.me/919840839697" style="color:rgb(80 193 239);text-decoration:none;font-family: 'Montserrat',sans-serif;">Click Here For Whatsapp Chat Support</a>
-</div>
+  <div style="text-align: center;">
+    <a href="https://wa.me/919840839697" style="color:rgb(80 193 239);text-decoration:none;font-family: 'Montserrat',sans-serif;margin-bottom:15px;line-height: 50px;height: 50px;width:200px;display: flex;align-items: center;margin:auto;"><img width="50px" height="50px" src="./whatsapp.png"> <span style="height:50px;line-height: 50px;"> Chat Support</span></a>
+
+  </div>
+  </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="cctask1.js" type="text/javascript"></script>
 </body>
