--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li ><a href="#home" class="home-mark active scroll">Home</a></li>
       <li ><a href="#topten" class="topten-mark scroll"> products</a></li>
       <li ><a href="#country" class="country-mark scroll">Advantages</a></li>
+      <li ><a href="#spec" class="spec-mark scroll">Specifications</a></li>
       <li ><a href="#hotspots" class="hotspots-mark scroll">About Us</a></li>
       <li ><a href="#inquiry" class="inquiry-mark scroll">Inquiry</a></li>
       <li ><a href="#contact" class="contact-mark scroll">Contact Us</a></li>
@@ -58,8 +59,8 @@
       </div>
     </div> 
   </div> 
-  <div style="position: relative;">
-    <div id="country" style="    font-family:  'Montserrat', sans-serif;font-size: 1.3em;z-index:20;line-height:50px;height: 50px; width: 150px;text-align:center;position: absolute;left: 0;top: 0;background-color: black;color: white;">Advantages:</div>
+  <div id="country" style="position: relative;">
+    <div  style="    font-family:  'Montserrat', sans-serif;font-size: 1.3em;z-index:20;line-height:50px;height: 50px; width: 150px;text-align:center;position: absolute;left: 0;top: 0;background-color: black;color: white;">Advantages:</div>
     <marquee style="height: 30px;color:white;margin-bottom: 100px;padding:10px 0px;line-height: 30px;vertical-align: top;">
       <div></div>
       <span>Made of quartz</span>
@@ -84,7 +85,7 @@
   </div>
 
 </div>
-<div class="sec country">
+<div class="sec country" id="spec">
   <img src="./spec.png" width="80%" style="margin:10%;" height="600px" alt="">
 
 </div>
@@ -126,7 +127,7 @@
   <div class="contact-2">
     <div class="location">
       <img src="./contact/1.JPG" alt="">
-      <a style="color:white;text-decoration:none;font-family: 'Montserrat',sans-serif;" href="https://goo.gl/maps/UybwGZGyF8CVqx2m9"><span>127, Poonamalee High Road, Madhoravoyal, Chennai - 600 095</span></a>
+      <a style="color:white;text-decoration:none;font-family: 'Montserrat',sans-serif;" href="https://goo.gl/maps/UybwGZGyF8CVqx2m9"><span>127, Poonamalee High Road, Madhoravoyal,<br>Chennai - 600 095, Tamil Nadu, (India)</span></a>
     </div>
     <div class="other">
       <div>
@@ -137,12 +138,16 @@
         <img src="./contact/4.JPG" alt="">
         <span>+91-9384090930</span>
       </div>
+        <div style="text-align: center;">
+          <a href="https://wa.me/919840839697" style="color:rgb(80 193 239);text-decoration:none;font-family: 'Montserrat',sans-serif;margin-bottom:15px;line-height: 50px;height: 50px;width:200px;display: flex;align-items: center;margin:auto;"><img width="50px" height="50px" src="./whatsapp.png"> <span style="height:50px;line-height: 50px;"> Chat Support</span></a>
+        </div>
+      </div>
+    </div>
+    <div style="text-align: center;" id="mob">
+      <a href="https://wa.me/919840839697" style="color:rgb(80 193 239);text-decoration:none;font-family: 'Montserrat',sans-serif;margin-bottom:15px;line-height: 50px;height: 50px;width:200px;display: flex;align-items: center;margin:auto;"><img width="50px" height="50px" src="./whatsapp.png"> <span style="height:50px;line-height: 50px;"> Chat Support</span></a>
     </div>
   </div>
-  <div style="text-align: center;">
-    <a href="https://wa.me/919840839697" style="color:rgb(80 193 239);text-decoration:none;font-family: 'Montserrat',sans-serif;margin-bottom:15px;line-height: 50px;height: 50px;width:200px;display: flex;align-items: center;margin:auto;"><img width="50px" height="50px" src="./whatsapp.png"> <span style="height:50px;line-height: 50px;"> Chat Support</span></a>
 
-  </div>
   </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="cctask1.js" type="text/javascript"></script>
