--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,200&display=swap" rel="stylesheet">
-
 </head>
 <body>
 <nav>
@@ -60,40 +59,52 @@
     </div> 
   </div> 
   <div id="country" style="position: relative;">
-    <div  style="    font-family:  'Montserrat', sans-serif;font-size: 1.3em;z-index:20;line-height:50px;height: 50px; width: 150px;text-align:center;position: absolute;left: 0;top: 0;background-color: black;color: white;">Advantages:</div>
-    <marquee style="height: 30px;color:white;margin-bottom: 100px;padding:10px 0px;line-height: 30px;vertical-align: top;">
+    <div  style="    font-family:  'Montserrat', sans-serif;font-size: 1.3em;z-index:20;line-height:50px;height: 50px; width: 150px;text-align:center;margin:auto;background-color: black;color: white;">Advantages:</div>
+    <marquee style="color:white;margin-bottom: 100px;padding:10px 0px;line-height: 30px;vertical-align: top;">
       <div></div>
-      <span>Made of quartz</span>
+      <span> <img src="./Advantages/0.png" width="100px";hight=150px></span>
       <div></div>
-      <span>No More Scratches</span>
+      <span><img src="./Advantages/1.png" width="100px";hight=150px></span>
       <div></div>
-      <span>Heat Resistant</span>
+      <span><img src="./Advantages/2.png" width="100px";hight=150px></span>
       <div></div>
-      <span>stain resistant</span>
+      <span><img src="./Advantages/3.png" width="100px";hight=150px></span>
       <div></div>
-      <span>non-absorbent</span>
+      <span><img src="./Advantages/4.png" width="100px";hight=150px></span>
       <div></div>
-      <span>hygenic</span>
+      <span><img src="./Advantages/5.png" width="100px";hight=150px></span>
       <div></div>
-      <span>eco-friendly</span>
+      <span><img src="./Advantages/6.png" width="100px";hight=175px></span>
       <div></div>
-      <span>easy to clean</span>
+      <span><img src="./Advantages/7.png" width="100px";hight=150px></span>
+      <div></div>
+      <span><img src="./Advantages/8.png" width="100px";hight=150px></span>
+      <div></div>      
+      <span><img src="./Advantages/9.png" width="100px";hight=150px></span>
+      <div></div>      
+      <span><img src="./Advantages/10.png" width="100px";hight=150px></span>
+      <div></div>      
+      <span><img src="./Advantages/11.png" width="100px";hight=150px></span>
+      <div></div>
+      <span><img src="./Advantages/12.png" width="100px";hight=150px></span>
+      <div></div>
+      <span><img src="./Advantages/13.png" width="100px";hight=150px></span>
+      <div></div>
+      <span><img src="./Advantages/14.png" width="100px";hight=150px></span>
+      <div></div>
+      <span><img src="./Advantages/15.png" width="100px";hight=150px></span>
       <div></div>
     </marquee>
   </div>
-
   </div>
-
 </div>
 <div class="sec country" id="spec">
-  <img src="./spec.png" width="80%" style="margin:10%;" height="600px" alt="">
-
+  <img id="specs" src="./16.png" style="margin-bottom:10%;" height="500px" alt="">
 </div>
 <div class="sec hotspots" id="hotspots">
   <p>ABOUT US</p>
   <div>
-    <span>IQuartz</span> a make in India Initiative, started by well established team to cater International and Domestic market to give high quality products and designs. Our product ranges are of world class quality at an affordable price.
-    We are giving numerous for your different requirements.
+    <span>I-Quartz</span> has been associated with grandeur and elegance, with a reputation for providing the most superior class of quartz slab. <span>I-Quartz</span> success has been built on the four pillars of product expertise, consistent quality, unwavering commitment and moral integrity. The management is passionate, highly motivated and driven by excellence.
   </div>
 </div>
 <div style="width: 100%;" class="sec hotspots inquiry" id="inquiry">
@@ -136,7 +147,7 @@
       </div>
       <div>
         <img src="./contact/4.JPG" alt="">
-        <span>+91-9384090930</span>
+        <span>+91-9840839697</span>
       </div>
         <div style="text-align: center;">
           <a href="https://wa.me/919840839697" style="color:rgb(80 193 239);text-decoration:none;font-family: 'Montserrat',sans-serif;margin-bottom:15px;line-height: 50px;height: 50px;width:200px;display: flex;align-items: center;margin:auto;"><img width="50px" height="50px" src="./whatsapp.png"> <span style="height:50px;line-height: 50px;"> Chat Support</span></a>
@@ -151,5 +162,8 @@
   </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="cctask1.js" type="text/javascript"></script>
+<div> <img style="margin:0px auto;display: block;";width="50px"height="100px" src="./21.png" alt=""></div>
+<div style="text-align:center;color:white;font-size: 12px">Copyright © 2020 - 2021, IQuartz; <b>All rights reserved.</B></div>
+<div style="text-align:right;color:white;font-size: 13px;margin-bottom: 10px;margin-right: 10px;">The Site is Managed by <B>Chirayu Rathi.  <img width="10px" height="10px"src="./contact/4.JPG" alt="">+919884067000</B><a href="https://wa.me/919884067000">(<img style="width: 20px;height: 20px;vertical-align: bottom;" src="./whatsapp.png">)</a></div>
 </body>
 </html>
